tests/baselines/reference/FunctionPropertyAssignments4_es6.errors.txt
tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments4_es6.ts(1,13): error TS1003: Identifier expected.


==== tests/cases/conformance/es6/functionPropertyAssignments/FunctionPropertyAssignments4_es6.ts (1 errors) ====
    var v = { * }
                ~
!!! error TS1003: Identifier expected.